@@ -1,0 +1,9 @@
+<h1>Event viewer</h1>
+
+<br><br>
+
+<div style="padding-left: 30px; width: 150px; float: left; line-height: 17px;">
+<h3>Status</h3><img src="../images/pixel_green.png" title="Validated event" alt="Validated event" width="10" height="10"> - Validated event<br><img src="../images/pixel_red.png" title="Event not validated" alt="Event not validated" width="10" height="10"> - Event not validated</div><div style="padding-left: 30px; width: 150px; float: left; line-height: 17px;"><h3>Actions</h3><img src="../images/ok.png" title="Validate event" alt="Validate event"> - Validate event<br><img src="../images/cross.png" title="Delete event" alt="Delete event"> - Delete event<br><img src="../images/page_lightning.png" title="Create incident from event" alt="Create incident from event"> - Create incident from event</div><div style="clear: both;">&nbsp;</div></div>
+
+
+
